Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-14235

main.mysql_upgrade_noengine failed, results mismatch

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.3(EOL)
    • 10.3.3
    • Tests, MTR
    • None
    • win64

    Description

      http://buildbot.askmonty.org/buildbot/builders/winx64-packages/builds/5516/steps/test/logs/stdio

      main.mysql_upgrade_noengine 'innodb'     w2 [ retry-fail ]
              Test ended at 2017-10-31 16:50:23
       
      CURRENT_TEST: main.mysql_upgrade_noengine
      --- D:/winx64-packages/build/src/mysql-test/r/mysql_upgrade_noengine.result	2017-10-31 15:17:24.000000000 +0000
      +++ D:\winx64-packages\build\src\mysql-test\r\mysql_upgrade_noengine.reject	2017-10-31 16:50:23.751918000 +0000
      @@ -263,8 +263,8 @@
       Upgrading from a version before MariaDB-10.1
       Phase 2/7: Installing used storage engines
       Checking for tables with unknown storage engine
      -installing plugin for 'archive' storage engine
       installing plugin for 'blackhole' storage engine
      +installing plugin for 'archive' storage engine
       Phase 3/7: Fixing views
       Phase 4/7: Running 'mysql_fix_privilege_tables'
       Phase 5/7: Fixing table and database names
       
      mysqltest: Result content mismatch
      

      Attachments

        Activity

          People

            bar Alexander Barkov
            alice Alice Sherepa
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.