MDEV-14235 main.mysql_upgrade_noengine failed, results mismatch